--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
                     <div>
                          <div id="atuiKernel_HeaderBlockLeft">
                               <div id="atuiKernel_HeaderLogotype">
-                                   <a href="https://alcapitan.github.io/atui">
-                                        <img alt="Icone du site" src="patch/icons/logo.png">
+                                   <a href="https://alcapitan.github.io/meteo">
+                                        <img alt="Icône du site" src="patch/icons/logo.png">
                                         <p>AT Weather</p>
                                    </a>
                               </div>
@@ -33,9 +33,9 @@
                          <div id="atuiKernel_HeaderBlockCenter">
                               <nav id="atuiSearchServices_Header">
                                    <div>
-                                        <form action="" method="post"><!-- Lier le fichier PHP dans action -->
+                                        <form>
                                              <input name="atuiSearchServices_Request" type="text" placeholder="Recherchez une ville">
-                                             <button type="submit">
+                                             <button id="searchBtn">
                                                   <img src="atui/SearchService/medias/search.png" alt="Rechercher">
                                              </button>
                                         </form>
