Portage vers ATUI developer branch

--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
                               </div>
                          </div>
                          <div id="atuiKernel_HeaderBlockCenter">
-                              <nav id="atuiSearchServices_Header">
+                              <nav id="atuiSearchservices_Header">
                                    <div>
                                         <form>
-                                             <input name="atuiSearchServices_Request" type="text" placeholder="Recherchez une ville">
+                                             <input name="atuiSearchservices_Request" type="text" placeholder="Recherchez une ville">
                                              <button id="searchBtn">
                                                   <img src="atui/SearchService/medias/search.png" alt="Rechercher">
                                              </button>
@@ -174,7 +174,7 @@
                </div>
           </section>
           <footer>
-               <a href="#atuiKernel_Header" id="atuiKernel_FooterBackup">
+               <a href="#atuiKernel_Header" id="atuiKernel_FooterScrolltop">
                     <img alt="Remonter en haut de la page" src="atui/kernel/medias/backUp.png">
                </a>
                <div id="atuiKernel_ToolsContact">
@@ -186,8 +186,7 @@
                          <a href="https://github.com/alcapitan/meteo"><img src="atui/kernel/medias/github.png" alt="Répertoire GitHub de AT Weather"></a>
                     </div>
                </div>
-               <div id="atuiKernel_PriorityLabel">
-                    <a href="https://github.com/alcapitan/atui" target="_blank">Ce site est basé sur ATUI 0.2 . En savoir plus...</a>
+               <div id="atuiKernel_FooterInfo">
                </div>
           </footer>
           <aside id="atuiKernel_Notification">
