Reécriture Table + Correctifs & Améliorations

--- a/index.html
+++ b/index.html
@@ -58,20 +58,20 @@
                          <div id="information">
                               <div id="skyToday">
                                    <img src="patch/icons/sun.png" id="skyTodayImg" />
-                                   <div>
-                                        <p id="skyTodayProbarain">X%</p>
-                                        <p id="skyTodayAccumurain">Xmm</p>
+                                   <div class="rain">
+                                        <p id="skyTodayProbarain">X %</p>
+                                        <p id="skyTodayAccumurain">X mm</p>
                                    </div>
                               </div>
                               <div id="tempToday" class="temperature">
-                                   <p id="tempTodayMin">X°C</p>
-                                   <p id="tempTodayMax">X°C</p>
+                                   <p id="tempTodayMin">X °C</p>
+                                   <p id="tempTodayMax">X °C</p>
                               </div>
                               <div id="windToday">
                                    <img src="patch/icons/wind-direction.png" id="windTodayImg" />
-                                   <div>
-                                        <p id="windTodayMin">Xkm/h</p>
-                                        <p id="windTodayMax">Xkm/h</p>
+                                   <div class="wind">
+                                        <p id="windTodayMin">X km/h</p>
+                                        <p id="windTodayMax">X km/h</p>
                                    </div>
                               </div>
                          </div>
@@ -80,87 +80,165 @@
                </article>
           </header>
           <section>
-               <div id="dataTable">
-                    <div>
+               <div id="table">
+                    <div class="nextDay">
                          <div>
                               <p>Jour</p>
                          </div>
                          <div>
-                              <p>Ciel</p>
-                         </div>
-                         <div>
-                              <p>Température</p>
-                         </div>
-                         <div>
-                              <p>Vent</p>
-                         </div>
-                    </div>
-                    <div>
-                         <div>
-                              <p>Mercredi 29 mars</p>
-                         </div>
-                         <div>
                               <img src="patch/icons/sun.png"/>
-                              <div>
-                                   <p>0%</p>
-                                   <p>0mm</p>
+                              <div class="rain">
+                                   <p>X %</p>
+                                   <p>X mm</p>
                               </div>
                          </div>
                          <div class="temperature">
-                              <p>15°C</p>
-                              <p>23°C</p>
+                              <p>X °C</p>
+                              <p>X °C</p>
                          </div>
                          <div>
                               <img src="patch/icons/wind-direction.png"/>
-                              <div>
-                                   <p>13km/h</p>
-                                   <p>26km/h</p>
+                              <div class="wind">
+                                   <p>X km/h</p>
+                                   <p>X km/h</p>
                               </div>
                          </div>
                     </div>
-                    <div>
+                    <div class="nextDay">
                          <div>
-                              <p>Mercredi 29 mars</p>
+                              <p>Jour</p>
                          </div>
                          <div>
                               <img src="patch/icons/sun.png"/>
-                              <div>
-                                   <p>0%</p>
-                                   <p>0mm</p>
+                              <div class="rain">
+                                   <p>X %</p>
+                                   <p>X mm</p>
                               </div>
                          </div>
                          <div class="temperature">
-                              <p>15°C</p>
-                              <p>23°C</p>
+                              <p>X °C</p>
+                              <p>X °C</p>
                          </div>
                          <div>
                               <img src="patch/icons/wind-direction.png"/>
-                              <div>
-                                   <p>13km/h</p>
-                                   <p>26km/h</p>
+                              <div class="wind">
+                                   <p>X km/h</p>
+                                   <p>X km/h</p>
                               </div>
                          </div>
                     </div>
-                    <div>
+                    <div class="nextDay">
                          <div>
-                              <p>Mercredi 29 mars</p>
+                              <p>Jour</p>
                          </div>
                          <div>
                               <img src="patch/icons/sun.png"/>
-                              <div>
-                                   <p>0%</p>
-                                   <p>0mm</p>
+                              <div class="rain">
+                                   <p>X %</p>
+                                   <p>X mm</p>
                               </div>
                          </div>
                          <div class="temperature">
-                              <p>15°C</p>
-                              <p>23°C</p>
+                              <p>X °C</p>
+                              <p>X °C</p>
                          </div>
                          <div>
                               <img src="patch/icons/wind-direction.png"/>
-                              <div>
-                                   <p>13km/h</p>
-                                   <p>26km/h</p>
+                              <div class="wind">
+                                   <p>X km/h</p>
+                                   <p>X km/h</p>
+                              </div>
+                         </div>
+                    </div>
+                    <div class="nextDay">
+                         <div>
+                              <p>Jour</p>
+                         </div>
+                         <div>
+                              <img src="patch/icons/sun.png"/>
+                              <div class="rain">
+                                   <p>X %</p>
+                                   <p>X mm</p>
+                              </div>
+                         </div>
+                         <div class="temperature">
+                              <p>X °C</p>
+                              <p>X °C</p>
+                         </div>
+                         <div>
+                              <img src="patch/icons/wind-direction.png"/>
+                              <div class="wind">
+                                   <p>X km/h</p>
+                                   <p>X km/h</p>
+                              </div>
+                         </div>
+                    </div>
+                    <div class="nextDay">
+                         <div>
+                              <p>Jour</p>
+                         </div>
+                         <div>
+                              <img src="patch/icons/sun.png"/>
+                              <div class="rain">
+                                   <p>X %</p>
+                                   <p>X mm</p>
+                              </div>
+                         </div>
+                         <div class="temperature">
+                              <p>X °C</p>
+                              <p>X °C</p>
+                         </div>
+                         <div>
+                              <img src="patch/icons/wind-direction.png"/>
+                              <div class="wind">
+                                   <p>X km/h</p>
+                                   <p>X km/h</p>
+                              </div>
+                         </div>
+                    </div>
+                    <div class="nextDay">
+                         <div>
+                              <p>Jour</p>
+                         </div>
+                         <div>
+                              <img src="patch/icons/sun.png"/>
+                              <div class="rain">
+                                   <p>X %</p>
+                                   <p>X mm</p>
+                              </div>
+                         </div>
+                         <div class="temperature">
+                              <p>X °C</p>
+                              <p>X °C</p>
+                         </div>
+                         <div>
+                              <img src="patch/icons/wind-direction.png"/>
+                              <div class="wind">
+                                   <p>X km/h</p>
+                                   <p>X km/h</p>
+                              </div>
+                         </div>
+                    </div>
+                    <div class="nextDay">
+                         <div>
+                              <p>Jour</p>
+                         </div>
+                         <div>
+                              <img src="patch/icons/sun.png"/>
+                              <div class="rain">
+                                   <p>X %</p>
+                                   <p>X mm</p>
+                              </div>
+                         </div>
+                         <div class="temperature">
+                              <p>X °C</p>
+                              <p>X °C</p>
+                         </div>
+                         <div>
+                              <img src="patch/icons/wind-direction.png"/>
+                              <div class="wind">
+                                   <p>X km/h</p>
+                                   <p>X km/h</p>
                               </div>
                          </div>
                     </div>
