--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
           <meta name="description" content="AT Weather fournit la météo sur 7 jours dans les villes de France métropolitaine.">
           <meta name="viewport" content="width=device-width, initial-scale=1">
           <meta name="robots" content="index,follow">
-          <link rel="canonical" href="https://alcapitan.github.io/meteo">
-          <meta name="theme-color" content="#e63300">
+          <link rel="canonical" href="https://alcapitan.github.io/weather">
+          <meta name="theme-color" content="rgb(64,191,128)">
           <title>AT Weather</title>
           <link rel="preconnect" href="https://fonts.googleapis.com">
           <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -22,7 +22,7 @@
                     <div>
                          <div id="atuiKernel_HeaderBlockLeft">
                               <div id="atuiKernel_HeaderLogotype">
-                                   <a href="https://alcapitan.github.io/meteo">
+                                   <a href="https://alcapitan.github.io/weather">
                                         <img alt="Icône du site" src="patch/icons/logo.png">
                                         <p>AT Weather</p>
                                    </a>
@@ -256,7 +256,7 @@
                <div class="atuiKernel_FooterContentsRow">
                     <h3>Contacts</h3>
                     <div id="atuiKernel_ToolsContactCompact">
-                         <a href="https://github.com/alcapitan/atui"><img src="atui/kernel/medias/github.png" alt="Allez voir mon compte GitHub. "></a>
+                         <a href="https://github.com/alcapitan/weather"><img src="atui/kernel/medias/github.png" alt="Voir le code source sur GitHub. "></a>
                     </div>
                </div>
                <div id="atuiKernel_FooterInfo">
