fix(atui): Continue to port to ATUI v0.4

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
             href="https://cdn.jsdelivr.net/npm/@tabler/icons-webfont@latest/tabler-icons.min.css"
         />
         <link rel="stylesheet" type="text/css" href="patch/main.css" />
+        <link rel="stylesheet" type="text/css" href="patch/patch_atui.css" />
         <link rel="icon" type="img/png" href="patch/icons/logo.png" />
     </head>
     <body id="atuiKernel_Body">
@@ -63,10 +64,10 @@
                             <article
                                 id="atuiSearchservices_HeaderPropositionsSuggested"
                             >
-                                <h3>Suggestions</h3>
+                                <!--<h3>Suggestions</h3>
                                 <div
                                     id="atuiSearchservices_HeaderPropositionsSuggestedContainer"
-                                ></div>
+                                ></div>-->
                             </article>
                         </aside>
                     </nav>
@@ -112,7 +113,7 @@
             </div>
             <section id="atuiKernel_Section">
                 <div class="atuiKernel_SectionContent">
-                    <div id="table">
+                    <div id="table" class="atuiKernel_SectionList">
                         <div class="nextDay">
                             <div>
                                 <p>Jour</p>
