fix(chore): rewrite suggested cities displaying
- Remove default ATUI function.
- Fix some visual issues.
- Fix the bug that table display this day.

--- a/index.html
+++ b/index.html
@@ -61,14 +61,9 @@
                             </form>
                         </div>
                         <aside id="atuiSearchservices_HeaderPropositions">
-                            <article
-                                id="atuiSearchservices_HeaderPropositionsSuggested"
-                            >
-                                <!--<h3>Suggestions</h3>
-                                <div
-                                    id="atuiSearchservices_HeaderPropositionsSuggestedContainer"
-                                ></div>-->
-                            </article>
+                            <div id="suggestions">
+                                <h3>Suggestions</h3>
+                            </div>
                         </aside>
                     </nav>
                     <hr class="atuiKernel_HeaderSpace optionDesktoponly" />
