chore(npm): setup NPM.
- NPM config from current ATUI.

--- a/index.html
+++ b/index.html
@@ -11,12 +11,6 @@
         <link rel="canonical" href="https://alcapitan.github.io/weather" />
         <meta name="theme-color" content="rgb(64,191,128)" />
         <title>AT Weather</title>
-        <link rel="preconnect" href="https://fonts.googleapis.com" />
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-        <link
-            href="https://fonts.googleapis.com/css2?family=Montserrat&family=Red+Hat+Display&display=swap"
-            rel="stylesheet"
-        />
         <link
             rel="stylesheet"
             type="text/css"
@@ -27,23 +21,17 @@
             type="text/css"
             href="https://cdn.jsdelivr.net/gh/alcapitan/atui@0.4.0/atui/SearchService/dist/dist.css"
         />
-        <link
-            rel="stylesheet"
-            href="https://cdn.jsdelivr.net/npm/@tabler/icons-webfont@latest/tabler-icons.min.css"
-        />
-        <link rel="stylesheet" type="text/css" href="patch/main.css" />
-        <link rel="stylesheet" type="text/css" href="patch/patch_atui.css" />
-        <link rel="icon" type="img/png" href="patch/icons/logo.png" />
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@tabler/icons-webfont@latest/tabler-icons.min.css" />
+        <link rel="stylesheet" type="text/css" href="dist/main.css" />
+        <link rel="stylesheet" type="text/css" href="dist/patch_atui.css" />
+        <link rel="icon" type="img/png" href="assets/icons/logo.png" />
     </head>
     <body id="atuiKernel_Body">
         <div class="atuiKernel_BodyContent">
             <header class="atuiKernel_Header optionCarousel">
                 <div>
-                    <a
-                        href="https://alcapitan.github.io/weather"
-                        class="atuiKernel_Logotype"
-                    >
-                        <img alt="Icon du site" src="patch/icons/logo.png" />
+                    <a href="https://alcapitan.github.io/weather" class="atuiKernel_Logotype">
+                        <img alt="Icon du site" src="assets/icons/logo.png" />
                         <p>AT Weather</p>
                     </a>
                     <hr class="atuiKernel_HeaderSpace" />
@@ -77,10 +65,7 @@
                             <p id="cityToday">Ville</p>
                             <div id="information">
                                 <div id="skyToday">
-                                    <img
-                                        src="patch/icons/sun.png"
-                                        id="skyTodayImg"
-                                    />
+                                    <img src="assets/icons/sun.png" id="skyTodayImg" />
                                     <div class="rain">
                                         <p id="skyTodayProbarain">X %</p>
                                         <p id="skyTodayAccumurain">X mm</p>
@@ -91,10 +76,7 @@
                                     <p id="tempTodayMax">X °C</p>
                                 </div>
                                 <div id="windToday">
-                                    <img
-                                        src="patch/icons/wind-direction.png"
-                                        id="windTodayImg"
-                                    />
+                                    <img src="assets/icons/wind-direction.png" id="windTodayImg" />
                                     <div class="wind">
                                         <p id="windTodayMin">X km/h</p>
                                         <p id="windTodayMax">X km/h</p>
@@ -114,7 +96,7 @@
                                 <p>Jour</p>
                             </div>
                             <div>
-                                <img src="patch/icons/sun.png" />
+                                <img src="assets/icons/sun.png" />
                                 <div class="rain">
                                     <p>X %</p>
                                     <p>X mm</p>
@@ -125,7 +107,7 @@
                                 <p>X °C</p>
                             </div>
                             <div>
-                                <img src="patch/icons/wind-direction.png" />
+                                <img src="assets/icons/wind-direction.png" />
                                 <div class="wind">
                                     <p>X km/h</p>
                                     <p>X km/h</p>
@@ -137,7 +119,7 @@
                                 <p>Jour</p>
                             </div>
                             <div>
-                                <img src="patch/icons/sun.png" />
+                                <img src="assets/icons/sun.png" />
                                 <div class="rain">
                                     <p>X %</p>
                                     <p>X mm</p>
@@ -148,7 +130,7 @@
                                 <p>X °C</p>
                             </div>
                             <div>
-                                <img src="patch/icons/wind-direction.png" />
+                                <img src="assets/icons/wind-direction.png" />
                                 <div class="wind">
                                     <p>X km/h</p>
                                     <p>X km/h</p>
@@ -160,7 +142,7 @@
                                 <p>Jour</p>
                             </div>
                             <div>
-                                <img src="patch/icons/sun.png" />
+                                <img src="assets/icons/sun.png" />
                                 <div class="rain">
                                     <p>X %</p>
                                     <p>X mm</p>
@@ -171,7 +153,7 @@
                                 <p>X °C</p>
                             </div>
                             <div>
-                                <img src="patch/icons/wind-direction.png" />
+                                <img src="assets/icons/wind-direction.png" />
                                 <div class="wind">
                                     <p>X km/h</p>
                                     <p>X km/h</p>
@@ -183,7 +165,7 @@
                                 <p>Jour</p>
                             </div>
                             <div>
-                                <img src="patch/icons/sun.png" />
+                                <img src="assets/icons/sun.png" />
                                 <div class="rain">
                                     <p>X %</p>
                                     <p>X mm</p>
@@ -194,7 +176,7 @@
                                 <p>X °C</p>
                             </div>
                             <div>
-                                <img src="patch/icons/wind-direction.png" />
+                                <img src="assets/icons/wind-direction.png" />
                                 <div class="wind">
                                     <p>X km/h</p>
                                     <p>X km/h</p>
@@ -206,7 +188,7 @@
                                 <p>Jour</p>
                             </div>
                             <div>
-                                <img src="patch/icons/sun.png" />
+                                <img src="assets/icons/sun.png" />
                                 <div class="rain">
                                     <p>X %</p>
                                     <p>X mm</p>
@@ -217,7 +199,7 @@
                                 <p>X °C</p>
                             </div>
                             <div>
-                                <img src="patch/icons/wind-direction.png" />
+                                <img src="assets/icons/wind-direction.png" />
                                 <div class="wind">
                                     <p>X km/h</p>
                                     <p>X km/h</p>
@@ -229,7 +211,7 @@
                                 <p>Jour</p>
                             </div>
                             <div>
-                                <img src="patch/icons/sun.png" />
+                                <img src="assets/icons/sun.png" />
                                 <div class="rain">
                                     <p>X %</p>
                                     <p>X mm</p>
@@ -240,7 +222,7 @@
                                 <p>X °C</p>
                             </div>
                             <div>
-                                <img src="patch/icons/wind-direction.png" />
+                                <img src="assets/icons/wind-direction.png" />
                                 <div class="wind">
                                     <p>X km/h</p>
                                     <p>X km/h</p>
@@ -252,7 +234,7 @@
                                 <p>Jour</p>
                             </div>
                             <div>
-                                <img src="patch/icons/sun.png" />
+                                <img src="assets/icons/sun.png" />
                                 <div class="rain">
                                     <p>X %</p>
                                     <p>X mm</p>
@@ -263,7 +245,7 @@
                                 <p>X °C</p>
                             </div>
                             <div>
-                                <img src="patch/icons/wind-direction.png" />
+                                <img src="assets/icons/wind-direction.png" />
                                 <div class="wind">
                                     <p>X km/h</p>
                                     <p>X km/h</p>
@@ -273,9 +255,7 @@
                     </div>
                     <div class="atuiKernel_SectionText">
                         <p>
-                            Les données proviennent de l'<a
-                                href="https://api.meteo-concept.com/"
-                                target="_blank"
+                            Les données proviennent de l'<a href="https://api.meteo-concept.com/" target="_blank"
                                 >API de Météo Concept</a
                             >.
                         </p>
@@ -286,9 +266,7 @@
                 <div class="atuiKernel_FooterContentsRow">
                     <h3>Contacts</h3>
                     <div id="atuiKernel_ToolsContactCompact">
-                        <a href="https://github.com/alcapitan/weather"
-                            ><i class="ti ti-brand-github"></i
-                        ></a>
+                        <a href="https://github.com/alcapitan/weather"><i class="ti ti-brand-github"></i></a>
                     </div>
                 </div>
                 <div id="atuiKernel_FooterInfo"></div>
@@ -296,6 +274,6 @@
         </div>
         <script src="https://cdn.jsdelivr.net/gh/alcapitan/atui@0.4.0/atui/kernel/dist/dist.js"></script>
         <script src="https://cdn.jsdelivr.net/gh/alcapitan/atui@0.4.0/atui/SearchService/dist/dist.js"></script>
-        <script src="patch/main.js"></script>
+        <script src="dist/main.js"></script>
     </body>
 </html>
