--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
             type="text/css"
             href="https://cdn.jsdelivr.net/gh/alcapitan/atui@0.4.0/atui/SearchService/dist/dist.css"
         />
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@tabler/icons-webfont@latest/tabler-icons.min.css" />
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@tabler/icons-webfont@2/tabler-icons.min.css" />
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1/font/bootstrap-icons.css" />
         <link rel="stylesheet" type="text/css" href="dist/main.css" />
         <link rel="stylesheet" type="text/css" href="dist/patch_atui.css" />
         <link rel="icon" type="img/png" href="assets/icons/logo.png" />
@@ -65,7 +66,7 @@
                             <p id="cityToday">Ville</p>
                             <div id="information">
                                 <div id="skyToday">
-                                    <img src="assets/icons/sun.png" id="skyTodayImg" />
+                                    <i class="bi bi-sun" id="skyTodayImg"></i>
                                     <div class="rain">
                                         <p id="skyTodayProbarain">X %</p>
                                         <p id="skyTodayAccumurain">X mm</p>
@@ -76,7 +77,7 @@
                                     <p id="tempTodayMax">X °C</p>
                                 </div>
                                 <div id="windToday">
-                                    <img src="assets/icons/wind-direction.png" id="windTodayImg" />
+                                    <i class="bi bi-arrow-up" id="windTodayImg"></i>
                                     <div class="wind">
                                         <p id="windTodayMin">X km/h</p>
                                         <p id="windTodayMax">X km/h</p>
@@ -96,7 +97,7 @@
                                 <p>Jour</p>
                             </div>
                             <div>
-                                <img src="assets/icons/sun.png" />
+                                <i class="bi bi-sun"></i>
                                 <div class="rain">
                                     <p>X %</p>
                                     <p>X mm</p>
@@ -107,7 +108,7 @@
                                 <p>X °C</p>
                             </div>
                             <div>
-                                <img src="assets/icons/wind-direction.png" />
+                                <i class="bi bi-arrow-up"></i>
                                 <div class="wind">
                                     <p>X km/h</p>
                                     <p>X km/h</p>
@@ -119,7 +120,7 @@
                                 <p>Jour</p>
                             </div>
                             <div>
-                                <img src="assets/icons/sun.png" />
+                                <i class="bi bi-sun"></i>
                                 <div class="rain">
                                     <p>X %</p>
                                     <p>X mm</p>
@@ -130,7 +131,7 @@
                                 <p>X °C</p>
                             </div>
                             <div>
-                                <img src="assets/icons/wind-direction.png" />
+                                <i class="bi bi-arrow-up"></i>
                                 <div class="wind">
                                     <p>X km/h</p>
                                     <p>X km/h</p>
@@ -142,7 +143,7 @@
                                 <p>Jour</p>
                             </div>
                             <div>
-                                <img src="assets/icons/sun.png" />
+                                <i class="bi bi-sun"></i>
                                 <div class="rain">
                                     <p>X %</p>
                                     <p>X mm</p>
@@ -153,7 +154,7 @@
                                 <p>X °C</p>
                             </div>
                             <div>
-                                <img src="assets/icons/wind-direction.png" />
+                                <i class="bi bi-arrow-up"></i>
                                 <div class="wind">
                                     <p>X km/h</p>
                                     <p>X km/h</p>
@@ -165,7 +166,7 @@
                                 <p>Jour</p>
                             </div>
                             <div>
-                                <img src="assets/icons/sun.png" />
+                                <i class="bi bi-sun"></i>
                                 <div class="rain">
                                     <p>X %</p>
                                     <p>X mm</p>
@@ -176,7 +177,7 @@
                                 <p>X °C</p>
                             </div>
                             <div>
-                                <img src="assets/icons/wind-direction.png" />
+                                <i class="bi bi-arrow-up"></i>
                                 <div class="wind">
                                     <p>X km/h</p>
                                     <p>X km/h</p>
@@ -188,7 +189,7 @@
                                 <p>Jour</p>
                             </div>
                             <div>
-                                <img src="assets/icons/sun.png" />
+                                <i class="bi bi-sun"></i>
                                 <div class="rain">
                                     <p>X %</p>
                                     <p>X mm</p>
@@ -199,7 +200,7 @@
                                 <p>X °C</p>
                             </div>
                             <div>
-                                <img src="assets/icons/wind-direction.png" />
+                                <i class="bi bi-arrow-up"></i>
                                 <div class="wind">
                                     <p>X km/h</p>
                                     <p>X km/h</p>
@@ -211,7 +212,7 @@
                                 <p>Jour</p>
                             </div>
                             <div>
-                                <img src="assets/icons/sun.png" />
+                                <i class="bi bi-sun"></i>
                                 <div class="rain">
                                     <p>X %</p>
                                     <p>X mm</p>
@@ -222,7 +223,7 @@
                                 <p>X °C</p>
                             </div>
                             <div>
-                                <img src="assets/icons/wind-direction.png" />
+                                <i class="bi bi-arrow-up"></i>
                                 <div class="wind">
                                     <p>X km/h</p>
                                     <p>X km/h</p>
@@ -234,7 +235,7 @@
                                 <p>Jour</p>
                             </div>
                             <div>
-                                <img src="assets/icons/sun.png" />
+                                <i class="bi bi-sun"></i>
                                 <div class="rain">
                                     <p>X %</p>
                                     <p>X mm</p>
@@ -245,7 +246,7 @@
                                 <p>X °C</p>
                             </div>
                             <div>
-                                <img src="assets/icons/wind-direction.png" />
+                                <i class="bi bi-arrow-up"></i>
                                 <div class="wind">
                                     <p>X km/h</p>
                                     <p>X km/h</p>
