--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="fr">
     <head>
         <meta charset="UTF-8" />
@@ -14,12 +14,12 @@
         <link
             rel="stylesheet"
             type="text/css"
-            href="https://cdn.jsdelivr.net/gh/alcapitan/atui@0.4.1/atui/kernel/dist/dist.css"
+            href="https://cdn.jsdelivr.net/gh/alcapitan/atui@0.4.2/atui/kernel/dist/main.css"
         />
         <link
             rel="stylesheet"
             type="text/css"
-            href="https://cdn.jsdelivr.net/gh/alcapitan/atui@0.4.1/atui/SearchService/dist/dist.css"
+            href="https://cdn.jsdelivr.net/gh/alcapitan/atui@0.4.2/atui/SearchService/dist/main.css"
         />
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@tabler/icons-webfont@2/tabler-icons.min.css" />
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1/font/bootstrap-icons.css" />
@@ -273,8 +273,8 @@
                 <div id="atuiKernel_FooterInfo"></div>
             </footer>
         </div>
-        <script src="https://cdn.jsdelivr.net/gh/alcapitan/atui@0.4.1/atui/kernel/dist/dist.js"></script>
-        <script src="https://cdn.jsdelivr.net/gh/alcapitan/atui@0.4.1/atui/SearchService/dist/dist.js"></script>
+        <script src="https://cdn.jsdelivr.net/gh/alcapitan/atui@0.4.2/atui/kernel/dist/main.js"></script>
+        <script src="https://cdn.jsdelivr.net/gh/alcapitan/atui@0.4.2/atui/SearchService/dist/main.js"></script>
         <script src="dist/main.js"></script>
     </body>
 </html>
